--- a/NoUnrepairableDamage.csproj
+++ b/NoUnrepairableDamage.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>NoUnrepairableDamage</AssemblyName>
     <Product>No Unrepairable Damage</Product>
-    <Version>1.0.8</Version>
+    <Version>1.0.9</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
